// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreationProgress renders correctly with all selected 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-1 .emotion-5 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.emotion-1 .emotion-3 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.emotion-1 .emotion-3:first-child {
  margin-left: 0px;
}

.emotion-1 .emotion-3:last-child {
  margin-right: 0px;
}

.emotion-1 .emotion-11 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.emotion-1 .emotion-9 {
  margin-top: 16px;
  font-size: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

.emotion-7 {
  vertical-align: middle;
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-8 {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.emotion-10 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.emotion-10::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 1
      </div>
    </div>
    <div
      class="emotion-10 emotion-11"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 2
      </div>
    </div>
    <div
      class="emotion-10 emotion-11"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with default props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-1 .emotion-5 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.emotion-1 .emotion-3 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.emotion-1 .emotion-3:first-child {
  margin-left: 0px;
}

.emotion-1 .emotion-3:last-child {
  margin-right: 0px;
}

.emotion-1 .emotion-11 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.emotion-1 .emotion-9 {
  margin-top: 16px;
  font-size: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

.emotion-7 {
  vertical-align: middle;
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-8 {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.emotion-10 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.emotion-10::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.emotion-14 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.emotion-16 {
  background-color: #d4dae7;
  height: 7px;
  width: 7px;
  border-radius: 16px;
}

.emotion-20 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.emotion-20::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 1
      </div>
    </div>
    <div
      class="emotion-10 emotion-11"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-14 emotion-5"
      >
        <div
          class="emotion-16 emotion-17"
        />
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 2
      </div>
    </div>
    <div
      class="emotion-20 emotion-11"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-14 emotion-5"
      >
        <div
          class="emotion-16 emotion-17"
        />
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with selected prop 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-1 .emotion-5 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.emotion-1 .emotion-3 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.emotion-1 .emotion-3:first-child {
  margin-left: 0px;
}

.emotion-1 .emotion-3:last-child {
  margin-right: 0px;
}

.emotion-1 .emotion-11 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.emotion-1 .emotion-9 {
  margin-top: 16px;
  font-size: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

.emotion-7 {
  vertical-align: middle;
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-8 {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.emotion-10 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.emotion-10::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  width: 100%;
}

.emotion-20 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.emotion-20::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.emotion-24 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.emotion-26 {
  background-color: #d4dae7;
  height: 7px;
  width: 7px;
  border-radius: 16px;
}

.emotion-30 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.emotion-30::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 1
      </div>
    </div>
    <div
      class="emotion-10 emotion-11"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 2
      </div>
    </div>
    <div
      class="emotion-20 emotion-11"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-24 emotion-5"
      >
        <div
          class="emotion-26 emotion-27"
        />
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 3
      </div>
    </div>
    <div
      class="emotion-30 emotion-11"
    />
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with steps number 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-1 .emotion-5 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.emotion-1 .emotion-3 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.emotion-1 .emotion-3:first-child {
  margin-left: 0px;
}

.emotion-1 .emotion-3:last-child {
  margin-right: 0px;
}

.emotion-1 .emotion-11 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.emotion-1 .emotion-9 {
  margin-top: 16px;
  font-size: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

.emotion-7 {
  color: #fff;
  font-weight: 500;
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #fff;
}

.emotion-8 {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.emotion-10 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.emotion-10::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  width: 100%;
}

.emotion-20 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.emotion-20::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.emotion-24 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.emotion-27 {
  color: #dce1eb;
  font-weight: 500;
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #dce1eb;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          1
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 1
      </div>
    </div>
    <div
      class="emotion-10 emotion-11"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          2
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 2
      </div>
    </div>
    <div
      class="emotion-20 emotion-11"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-24 emotion-5"
      >
        <div
          class="emotion-6 emotion-27"
        >
          3
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly without animation 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-1 .emotion-5 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.emotion-1 .emotion-3 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.emotion-1 .emotion-3:first-child {
  margin-left: 0px;
}

.emotion-1 .emotion-3:last-child {
  margin-right: 0px;
}

.emotion-1 .emotion-11 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.emotion-1 .emotion-9 {
  margin-top: 16px;
  font-size: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

.emotion-7 {
  vertical-align: middle;
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-8 {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.emotion-10 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.emotion-10::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  width: 100%;
}

.emotion-20 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.emotion-20::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
}

.emotion-24 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.emotion-26 {
  background-color: #d4dae7;
  height: 7px;
  width: 7px;
  border-radius: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 1
      </div>
    </div>
    <div
      class="emotion-10 emotion-11"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
          class="sc-ui-icon emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 2
      </div>
    </div>
    <div
      class="emotion-20 emotion-11"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-24 emotion-5"
      >
        <div
          class="emotion-26 emotion-27"
        />
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
